--- a/imdbTest.ipynb
+++ b/imdbTest.ipynb
@@ -1569,18 +1569,13 @@
     "from imdbpie import Imdb\n",
     "import asyncio\n",
     "import aiofiles\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
     "\n",
     "imdb = Imdb()\n",
     "\n",
-    "def get_movie(i):\n",
-    "    future = asyncio.Future()\n",
-    "    future.set_result(imdb.get_title_plot_synopsis('tt' + str(i).zfill(7)))\n",
-    "    return future\n",
-    "\n",
-    "async def get_syn(start, end):\n",
-    "    for i in range(start, end):\n",
+    "async def get_syn(i):\n",
     "        try:\n",
-    "            curr_movie = await get_movie(i)\n",
+    "            curr_movie = await loop.run_in_executor(ProcessPoolExecutor(), imdb.get_title_plot_synopsis(), 'tt' + str(i).zfill(7)) \n",
     "            #print(curr_movie)\n",
     "            if 'plotSynopses' in curr_movie:\n",
     "                async with aiofiles.open('movies_synopsis.txt', 'a') as f:\n",
@@ -1589,9 +1584,8 @@
     "            pass\n",
     "loop = asyncio.get_event_loop()\n",
     "tasks = []\n",
-    "amount = 500\n",
-    "for i in range(1825683, 1825783, amount):\n",
-    "    tasks.append(loop.create_task(get_syn(i, i + amount - 1)))\n",
+    "for i in range(1825683, 1825783):\n",
+    "    tasks.append(loop.create_task(get_syn(i)))\n",
     "loop.run_until_complete(asyncio.wait(tasks))"
    ]
   },
