trying tensorflow, didnt work

--- a/2.ipynb
+++ b/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -22,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    }
+   ],
    "source": [
     "import re, gensim"
    ]
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +106,7 @@
        " ('pig', 0.6147049069404602)]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +242,7 @@
        " ('orange', 0.6221187710762024)]"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,6 +291,256 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('me', 0.004309204), ('you', 0.0019398305), ('go', 0.0018005079), ('looks', 0.0016650856), ('look', 0.0015068331), ('your', 0.0013471774), ('goes', 0.0009953465), ('feed', 0.0009420954), ('going', 0.0009384326), ('something', 0.0009142542)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.predict_output_word(['I', 'like', 'to', 'fly']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = gensim.models.Word2Vec.load('models/word2vec')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('portable', 0.8643690943717957),\n",
+       " ('microcomputer', 0.8396008014678955),\n",
+       " ('cbm', 0.8364672660827637),\n",
+       " ('workstation', 0.8334411382675171),\n",
+       " ('workstations', 0.8328894376754761),\n",
+       " ('firmware', 0.8251444101333618),\n",
+       " ('risc', 0.8230963945388794),\n",
+       " ('oem', 0.8200814723968506),\n",
+       " ('handheld', 0.8160394430160522),\n",
+       " ('vax', 0.8130028247833252)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('laptop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_dim = 100\n",
+    "embedding_matrix = np.zeros((len(model.wv.vocab), 100))\n",
+    "for i in range(len(model.wv.vocab)):\n",
+    "    embedding_vector = model.wv[model.wv.index2word[i]]\n",
+    "    if embedding_vector is not None:\n",
+    "        embedding_matrix[i] = embedding_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71290\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (len(model.wv.vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saved_embeddings = tf.constant(embedding_matrix)\n",
+    "embedding = tf.Variable(initial_value=saved_embeddings, trainable=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_size = 8  # Random set of words to evaluate similarity on.\n",
+    "valid_window = 100  # Only pick dev samples in the head of the distribution.\n",
+    "valid_examples = np.random.choice(valid_window, valid_size, replace=False)\n",
+    "valid_dataset = tf.constant(valid_examples, dtype=tf.int32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm = tf.sqrt(tf.reduce_sum(tf.square(embedding), 1, keep_dims=True))\n",
+    "normalized_embeddings = embedding / norm\n",
+    "valid_embeddings = tf.nn.embedding_lookup(\n",
+    "      normalized_embeddings, valid_dataset)\n",
+    "similarity = tf.matmul(valid_embeddings, normalized_embeddings, transpose_b=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nearest to the: termed, named, known, referred, spelled, dubbed, abbreviated, labeled,\n",
+      "Nearest to of: decades, weeks, months, days, decade, year, hours, millennia,\n",
+      "Nearest to and: arisen, become, fallen, undergone, persisted, disappeared, risen, existed,\n",
+      "Nearest to one: was, remains, exists, represents, lies, makes, constitutes, occurs,\n",
+      "Nearest to in: certain, always, many, both, some, invariably, various, none,\n",
+      "Nearest to a: sometimes, frequently, usually, generally, occasionally, typically, rarely, commonly,\n",
+      "Nearest to to: is, became, were, remains, remained, fell, had, came,\n",
+      "Nearest to zero: near, reached, ahead, around, consuming, elapsed, highest, daylight,\n"
+     ]
+    }
+   ],
+   "source": [
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    # call our similarity operation\n",
+    "    sim = similarity.eval()\n",
+    "    # run through each valid example, finding closest words\n",
+    "    for i in range(valid_size):\n",
+    "        valid_word = model.wv.index2word[i]\n",
+    "        top_k = 8  # number of nearest neighbors\n",
+    "        nearest = (-sim[i, :]).argsort()[1:top_k + 1]\n",
+    "        log_str = 'Nearest to %s:' % valid_word\n",
+    "        for k in range(top_k):\n",
+    "            close_word = model.wv.index2word[nearest[k]]\n",
+    "            log_str = '%s %s,' % (log_str, close_word)\n",
+    "        print(log_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-768e90899b6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'wv' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(wv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model(embeding):\n",
+    "    kmodel = keras.models.Sequential()\n",
+    "    kmodel.add(keras.layers.Embedding(input_dim = (len(model.wv.vocab), ,weights=[embeding], name= 'embedding_1'))\n",
+    "    for i in range(3):\n",
+    "        lstm = LSTM(rnn_size, name=\"lstm_%d\"%(i+1))\n",
+    "        kmodel.add(lstm)\n",
+    "        kmodel.add(Dropout(p_dense, name=\"dropout_%d\"%(i+1)))\n",
+    "        kmodel.add(Dense())\n",
+    "        kmodel.add(Activation('softmax', name=\"activation\"))\n",
+    "        return kmodel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 2 required positional arguments: 'input_dim' and 'output_dim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-c26e4dc7ae40>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mencode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuild_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0membedding_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-12-6fd950ad74c2>\u001b[0m in \u001b[0;36mbuild_model\u001b[1;34m(embeding)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbuild_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0membeding\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mkmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mkmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0membeding\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m \u001b[1;34m'embedding_1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mlstm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrnn_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"lstm_%d\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\keras\\legacy\\interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[0;32m     90\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[1;32m---> 91\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 2 required positional arguments: 'input_dim' and 'output_dim'"
+     ]
+    }
+   ],
+   "source": [
+    "encode = build_model(embedding_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -304,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
